# alcube

./: .gitignore  CMakeLists.txt  README.md  dtos.yml  gpu-interface.yml  gulp-alcube-code-generator.coffee  gulpfile.coffee  package.json  physics-dtos.yml  physics-simulator.yml  setup.py  wip.sh
codegenerator/: clcinspector.py  definitionloader.py  dtosgenerator.py  errors.py  functionprototypesgenerator.py  gpuinterfacegenerator.py  main.py  simulatorbasegenerator.py  utils.py
src/coffee/: init-services.coffee  init-settings.coffee  lib.coffee  scratch.coffee  settings.coffee  test.coffee  test2.coffee
src/coffee/libs/: init-services.coffee  services.coffee
src/coffee/samples/: blank.coffee  fluid-and-softbody.coffee  fluid.coffee  large-amount-of-rigid-bodies.coffee  rigid-bodies.coffee  softbody.coffee  stress-test.coffee
src/coffee/settings/: half-size.coffee  large-size-zero-g.coffee  zero-g.coffee
src/cpp/: main.cpp
src/cpp/app/: Application.cpp  Application.h  DI.cpp  DI.h  Grid.cpp  Grid.h  main.cpp
src/cpp/biology/: Simulator.cpp  Simulator.h
src/cpp/biology/opencl/: dtos.h
src/cpp/drawing/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CanvasWithProfiler.cpp  CanvasWithProfiler.h  Context.h  Drawable.cpp  Drawable.h  Drawer.cpp  Drawer.h  DrawerWithProfiler.cpp  DrawerWithProfiler.h  GroupShape.cpp  GroupShape.h  Material.h  MultiShape.cpp  MultiShape.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h
src/cpp/drawing/samples/: SimpleSphereSample.cpp  SimpleSphereSample.h
src/cpp/drawing/shaders/: DirectionalLightShader.cpp  DirectionalLightShader.h  ParticleShader.cpp  ParticleShader.h  Shaders.cpp  Shaders.h  SimpleShader.cpp  SimpleShader.h  StandardShader.cpp  StandardShader.h  TileShader.cpp  TileShader.h
src/cpp/drawing/shapes/: Shapes.cpp  Shapes.h
src/cpp/drawing/textures/: CheckTexture.cpp  CheckTexture.h
src/cpp/gpu/: GPU.cpp  GPU.h  GPUAccessor.cpp  GPUAccessor.h  dtos.h
src/cpp/models/: Actor.cpp  Actor.h  Alcube.cpp  Alcube.h  Settings.cpp  Settings.h  Simulator.h
src/cpp/models/actor/: Actor.cpp  Actor.h
src/cpp/models/drawing/: Model3D.cpp  Model3D.h  Renderer.cpp  Renderer.h  RenderingGroup.cpp  RenderingGroup.h  SphereDrawable.cpp  SphereDrawable.h
src/cpp/models/link/: Link.h
src/cpp/models/physics/: Accessors.cpp  Accessors.h  Features.cpp  Features.h
src/cpp/physics/: Actor.cpp  Actor.h  ActorFactory.cpp  ActorFactory.h  ActorResources.cpp  ActorResources.h  Cell.cpp  Cell.h  FluidActor.cpp  FluidActor.h  FluidParticle.cpp  FluidParticle.h  Grid.cpp  Grid.h  Simulator.cpp  Simulator.h  SimulatorBase.cpp  SimulatorBase.h  SoftBodyActor.cpp  SoftBodyActor.h  SoftBodyParticle.cpp  SoftBodyParticle.h  Spring.cpp  Spring.h  SubSimulator.cpp  SubSimulator.h
src/cpp/physics/fluid/: Actor.cpp  Actor.h  Simulator.cpp  Simulator.h
src/cpp/physics/opencl/: dtos.h
src/cpp/physics/rigidbody/: RigidBody.cpp  RigidBody.h  Sphere.cpp  Sphere.h  Spring.cpp  Spring.h
src/cpp/physics/samples/: ApplicationBase.cpp  ApplicationBase.h  BaseApplication.cpp  BaseApplication.h  BenchmarkSample.cpp  BenchmarkSample.h  DrawableFluidParticle.cpp  DrawableFluidParticle.h
src/cpp/physics/softbody/: Actor.cpp  Actor.h  Simulator.cpp  Simulator.h  Spring.cpp  Spring.h
src/cpp/samples/: Application.cpp  Application.h  ApplicationBase.cpp  ApplicationBase.h  SampleApplication.cpp  SampleApplication.h  SphereDrawable.cpp  SphereDrawable.h  main.cpp
src/cpp/samples/v8/: main.cpp
src/cpp/scripting/: Evaluator.cpp  Evaluator.h  utils.cpp  utils.h
src/cpp/scripting/mappings/: Actor.cpp  Actor.h  Alcube.cpp  Alcube.h  Settings.cpp  Settings.h
src/cpp/tools/kernelcompiler/: main.cpp
src/cpp/utils/: EventEmitter.cpp  EventEmitter.h  FileUtil.cpp  FileUtil.h  GPUBasedProperty.cpp  GPUBasedProperty.h  Keyboard.cpp  Keyboard.h  MemoryPool.cpp  MemoryPool.h  Mouse.cpp  Mouse.h  OpenGLWindow.cpp  OpenGLWindow.h  PeriodicScheduler.cpp  PeriodicScheduler.h  Profiler.cpp  Profiler.h  ResourceAllocation.cpp  ResourceAllocation.h  alcubemath.cpp  alcubemath.h
src/cpp/utils/app/: Application.h  OpenGLApplication.cpp  OpenGLApplication.h  OpenGLWindow.cpp  OpenGLWindow.h
src/cpp/utils/opencl/: CommandQueue.cpp  CommandQueue.h  KernelFactory.cpp  KernelFactory.h  MemAllocator.cpp  MemAllocator.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  ProgramFactory.cpp  ProgramFactory.h  Resources.cpp  Resources.h  ResourcesProvider.cpp  ResourcesProvider.h  Simulator.cpp  Simulator.h  conversions.cpp  conversions.h
src/js/: init-services.js  lib.js  scratch.js  test.js  test2.js
src/js/libs/: init-services.js  init-settings.js  services.js
src/js/samples/: blank.js  fluid-and-softbody.js  fluid.js  large-amount-of-rigid-bodies.js  rigid-bodies.js  softbody.js  stress-test.js
src/js/settings/: half-size.js  large-size-zero-g.js  standard.js  zero-g.js
src/kernels/biology/: biology.cl
src/kernels/drawing/: drawing.cl  particle.cl
src/kernels/generated-code/: all.cl  dtos.cl  prototypes.cl
src/kernels/physics/: broadphase.cl  common.cl  constraintresolving.cl  dtos.cl  fluid.cl  input.cl  motion.cl  narrowphase.cl  output.cl  physics.cl  setupgrid.cl  softbody.cl
src/kernels/physics/force-calculation/: constraint.cl  fluid.cl  friction.cl  init.cl  penalty.cl
src/scripts/: codegenerator.py  dtos.yml
src/shaders/: directional-light.fragmentshader  directional-light.vertexshader  particle.vertexshader  simple.vertexshader  standard.fragmentshader  standard.vertexshader  tile.fragmentshader
src/shaders/directional-light/: instance-color.fragmentshader  instance-color.vertexshader  texture-instance-color.fragmentshader  texture-instance-color.vertexshader  texture-single-color.fragmentshader  texture-single-color.vertexshader
src/templates/cpp/gpu/: GPU.cpp-kernel-assignment-for-builtin-type.template  GPU.cpp-kernel-parameter.template  (+32 more)
src/templates/kernels/: dtos.cl-field-with-index.template  dtos.cl-field.template  dtos.cl-struct.template
test/cpp/physics/: SimulatorTest.cpp
(+64 files in other folders)
